[gd_scene load_steps=2 format=3 uid="uid://4dgdd4uuij00"]

[ext_resource type="Script" path="res://Button.gd" id="1_4ocpv"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_4ocpv")

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 520.0
offset_top = 312.0
offset_right = 611.0
offset_bottom = 344.0

[node name="Button" type="Button" parent="."]
offset_left = 520.0
offset_top = 267.0
offset_right = 610.0
offset_bottom = 298.0
text = "DRAW"

[node name="Button2" type="Button" parent="."]
offset_left = 1043.0
offset_top = 7.0
offset_right = 1145.0
offset_bottom = 38.0
text = "PRINT CARD"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 648.0
offset_top = 48.0
offset_right = 1153.0
offset_bottom = 648.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "text"
autowrap_mode = 2

[node name="Button3" type="Button" parent="."]
offset_left = 81.0
offset_top = 611.0
offset_right = 125.0
offset_bottom = 642.0
text = "Save"

[node name="Button4" type="Button" parent="."]
offset_left = 136.0
offset_top = 609.0
offset_right = 182.0
offset_bottom = 640.0
text = "Load"

[node name="Button5" type="Button" parent="."]
offset_left = 204.0
offset_top = 610.0
offset_right = 263.0
offset_bottom = 641.0
text = "Delete"

[node name="Button6" type="Button" parent="."]
offset_left = 17.0
offset_top = 21.0
offset_right = 76.0
offset_bottom = 52.0
text = "Back"

[node name="Button7" type="Button" parent="."]
offset_left = 1068.0
offset_top = 562.0
offset_right = 1128.0
offset_bottom = 593.0
text = "Deck 1"

[node name="Button8" type="Button" parent="."]
offset_left = 1068.0
offset_top = 605.0
offset_right = 1128.0
offset_bottom = 636.0
text = "Deck 2"

[node name="Button9" type="Button" parent="."]
offset_left = 491.0
offset_top = 367.0
offset_right = 643.0
offset_bottom = 398.0
text = "DRAW FROM DECK"

[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
